# cplus_learn

./: Makefile  README.md
cplus-lib-test/: README.md
cplus-lib-test/cplus-lib-build/dynamic/: README.md
cplus-lib-test/cplus-lib-build/static/: README.md  test.cpp
cplus-lib-test/cplus-lib-use-base/: README.md
cplus-lib-test/cplus-lib-use-cmake/: CMakeLists.txt  README.md
cplus-lib-test/cplus-lib-use-cmake/lib/: libmylib.so.1
cplus-lib-test/cplus-lib-use-g++/: README.md  main.cpp
cplus-lib-test/cplus-with-lib-cmake/: CMakeLists.txt  README.md
cplus-lib-test/cplus-with-lib-cmake/include/: CMakeLists.txt
cplus-lib-test/cplus-with-lib-cmake/src/: CMakeLists.txt
cplus-lib-test/cplus-without-lib-cmake/: CMakeLists.txt  README.md
cplus-lib-test/cplus-without-lib-cmake/include/: test.h
cplus-virtual-test/: CMakeLists.txt  README.md
cplus-virtual-test/virtual/: CMakeLists.txt  virtual_test.cpp
